# Event-Registration-System

./: Pipfile  README.md  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt
api/: urls.py  views.py
assets/js/: cookie.js
cpanel/: admin.py  forms.py  models.py  urls.py  views.py
cpanel/migrations/: 0001_initial.py  0002_eventtype_event_event_type.py  0003_alter_event_event_type.py  0004_alter_event_event_type.py  0005_remove_event_event_type.py  0006_delete_eventtype.py  0007_eventtype.py  0008_event_event_type.py  0009_alter_event_event_type.py  0010_alter_event_event_type.py  0011_remove_event_event_type.py  0012_event_event_type.py  0013_participant_password_participant_session_token.py  0014_alter_participant_password.py  0015_alter_participant_profile_picture.py  0016_event_event_photo.py  0017_alter_participant_profile_picture.py  0018_alter_event_event_photo_and_more.py
schoolevent/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
templates/: _base.html  _cpbase.html  cp_event_add.html  cp_event_delete.html  cp_event_edit.html  cp_event_import.html  cp_event_import_success.html  cp_event_list.html  cp_event_participants.html  cp_event_type_add.html  cp_event_type_delete.html  cp_event_type_edit.html  cp_event_type_list.html  cp_home.html  cp_login.html  index.html
templates/partials/: _cp_nav.html
